estrutura do site finalizada (atualização mais recente)

--- a/produtos/orquidea.html
+++ b/produtos/orquidea.html
@@ -6,8 +6,13 @@
     <title>Orquídeas</title>
 </head>
 <body>
-    <header></header>
-
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a class="menu">Pagina incial</a>
+            <a class="menu">Quem Somos</a>
+            <a class="menu">Produtos</a>
+        </nav>
+     </header>
     <main></main>
 
     <footer></footer>
