--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     </main>
 
 
-    <footer class="rodape"></footer>
+    <footer class="rodape">
+        <p>telefone para contato: (18) 3625xxxx</p>
+
+    </footer>
     
 </body>
 </html>
