--- a/produtos/ipe.html
+++ b/produtos/ipe.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rosa do deserto</title>
+    <title>Ipês</title>
 </head>
 <body>
     <header class="cabecalho">
