--- a/produtos/rosas.html
+++ b/produtos/rosas.html
@@ -6,7 +6,13 @@
     <title>Rosas</title>
 </head>
 <body>
-    <header></header>
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a class="menu">Pagina incial</a>
+            <a class="menu">Quem Somos</a>
+            <a class="menu">Produtos</a>
+        </nav>
+     </header>
 
     <main></main>
 
