--- a/produtos/espadadesaojorge.html
+++ b/produtos/espadadesaojorge.html
@@ -14,7 +14,15 @@
         </nav>
      </header>
 
-    <main></main>
+     <main class="apresentacao">
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__paragrafo">Espada de São Jorge</h1>
+            <p class="apresentacao__conteudo__texto">A Espada de São Jorge (Sansevieria trifasciata), também conhecida como "língua de sogra", é uma planta suculenta muito resistente, famosa por suas longas folhas verticais e rígidas que se assemelham a espadas. As folhas são verdes-escuro com listras horizontais mais claras, e algumas variedades possuem bordas amareladas. Sua aparência elegante e minimalista faz dela uma das plantas de interior mais populares.</p>
+            <p class="apresentacao__conteudo__texto">Originária da África Ocidental, a Espada de São Jorge é extremamente adaptável, podendo crescer em diversas condições de luz, desde luz solar direta até ambientes com pouca iluminação. Além disso, requer pouca água, pois armazena umidade em suas folhas espessas, sendo ideal para quem procura uma planta de baixa manutenção.</p>
+            <p class="apresentacao__conteudo__texto">Além de seu valor ornamental, a Espada de São Jorge é conhecida por suas propriedades purificadoras do ar, sendo capaz de remover toxinas como formaldeído e benzeno do ambiente. Na cultura popular, ela é associada à proteção e é frequentemente usada como símbolo de boa sorte e defesa contra energias negativas.</p>
+        </section>
+
+    </main>
 
     <footer></footer>
     
