--- a/produtos/girasol.html
+++ b/produtos/girasol.html
@@ -14,7 +14,15 @@
         </nav>
      </header>
 
-    <main></main>
+     <main class="apresentacao">
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__paragrafo">Girassol</h1>
+            <p class="apresentacao__conteudo__texto">O girassol (Helianthus annuus) é uma planta herbácea conhecida por suas grandes e chamativas flores que acompanham o movimento do sol, um fenômeno chamado heliotropismo. Suas flores são compostas por uma coroa de pétalas amarelas brilhantes ao redor de um disco central, que pode variar de amarelo a marrom, dependendo da variedade. Esse disco central é composto de inúmeras flores menores, que posteriormente se transformam em sementes.</p>
+            <p class="apresentacao__conteudo__texto">O girassol pode crescer de 1 a 3 metros de altura, com um caule grosso e áspero que sustenta as flores. As folhas são grandes, em forma de coração, e têm uma textura áspera. O girassol é nativo da América do Norte, mas é cultivado em várias partes do mundo, principalmente por suas sementes, que são usadas para produzir óleo de girassol e como alimento.</p>
+            <p class="apresentacao__conteudo__texto">Além de seu valor econômico, o girassol é frequentemente associado ao simbolismo de felicidade, energia e lealdade, graças à sua aparência radiante e à forma como "segue" o sol. É uma planta resistente e se adapta bem a diferentes tipos de solo, preferindo áreas ensolaradas e de clima moderado.</p>
+        </section>
+
+    </main>
 
     <footer></footer>
     
