estrutura pronta atualizada

--- a/produtos/cacto.html
+++ b/produtos/cacto.html
@@ -18,7 +18,7 @@
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__paragrafo">Cacto</h1>
             
-            <img src="../fotos/Cacto.jpg">
+            <img src="../fotos/Cacto.jpg" alt="foto de cactos"> 
 
 
             <p> class="apresentacao__conteudo__texto">Os cactos são plantas suculentas que pertencem à família Cactaceae, sendo conhecidos por sua capacidade de armazenar água em seus tecidos, o que lhes permite sobreviver em ambientes áridos e desertos. Eles apresentam uma variedade impressionante de formas e tamanhos, desde pequenos cactos em miniatura até grandes cactos colunares que podem atingir várias metros de altura.</p>
