--- a/produtos/rosas.html
+++ b/produtos/rosas.html
@@ -17,6 +17,9 @@
      <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__paragrafo">Rosas</h1>
+
+            <img src="../fotos/rosas.jpg" alt="foto de rosas">
+
             <p class="apresentacao__conteudo__texto">As rosas são flores icônicas conhecidas por sua beleza, fragrância e simbolismo. Elas crescem em arbustos espinhosos e têm pétalas macias e delicadas, organizadas em camadas que se abrem em uma forma redonda ou espiralada. As cores das rosas variam amplamente, incluindo vermelho, rosa, branco, amarelo, laranja e até tons mais raros, como o azul ou preto, sendo que cada cor carrega significados simbólicos diferentes. As rosas vermelhas, por exemplo, simbolizam amor e paixão, enquanto as brancas representam pureza e inocência.</p>
             <p class="apresentacao__conteudo__texto">As rosas são cultivadas tanto para ornamentação quanto para o uso em perfumes e cosméticos, devido à sua fragrância marcante. Elas preferem climas temperados e requerem cuidado com rega e poda regulares para florescerem de forma saudável. Além disso, são amplamente utilizadas em buquês, jardins e paisagismo.</p>
         </section>
