--- a/produtos/bambudasorte.html
+++ b/produtos/bambudasorte.html
@@ -18,7 +18,7 @@
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__paragrafo">Bambu da sorte</h1>
             
-            <img src="" alt="">
+            <img src="../fotos/Bambu_da_sorte.jpg" alt="foto bambu da sorte">
             
             <p class="apresentacao__conteudo__texto">O bambu-da-sorte (Dracaena sanderiana), também conhecido como "bambu-da-sorte" ou "bambu da felicidade", é uma planta ornamental popular que não é um verdadeiro bambu, mas pertence à família das dracenas. Nativa da África Central e Ocidental, essa planta é conhecida por sua aparência elegante, com caules longos e eretos, geralmente verde-claros, que podem crescer em alturas variáveis.</p>
             <p class="apresentacao__conteudo__texto">As folhas do bambu-da-sorte são longas, estreitas e pontiagudas, crescendo em espiral no topo dos caules. A planta é frequentemente cultivada em arranjos aquáticos, onde seus caules são colocados em vasos com água, mas também pode ser cultivada em solo. Acredita-se que o bambu-da-sorte traga sorte e prosperidade, sendo uma planta popular em práticas de Feng Shui.</p>
