--- a/produtos/croton.html
+++ b/produtos/croton.html
@@ -17,6 +17,9 @@
      <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__paragrafo">Cróton</h1>
+
+            <img src="../fotos/Cróton.jpg" alt="foto da planta Cróton">
+
             <p class="apresentacao__conteudo__texto">O cróton (Codiaeum variegatum) é uma planta ornamental muito apreciada por suas folhas vibrantes e variadas, que apresentam uma combinação impressionante de cores, incluindo verde, amarelo, laranja, vermelho e até roxo. As folhas são geralmente largas, ovais ou lobadas, e podem ter formas e padrões distintos, variando entre as diferentes variedades da planta.</p>
             <p class="apresentacao__conteudo__texto">O cróton (Codiaeum variegatum) é uma planta ornamental muito apreciada por suas folhas vibrantes e variadas, que apresentam uma combinação impressionante de cores, incluindo verde, amarelo, laranja, vermelho e até roxo. As folhas são geralmente largas, ovais ou lobadas, e podem ter formas e padrões distintos, variando entre as diferentes variedades da planta.
 
