--- a/produtos/ipe.html
+++ b/produtos/ipe.html
@@ -17,6 +17,9 @@
      <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__paragrafo">Ipê</h1>
+
+            <img src="../fotos/ipe.jpg" alt="foto da arvore ipê">
+
             <p class="apresentacao__conteudo__texto">O ipê é uma árvore majestosa e muito apreciada por suas flores vibrantes e ornamentais, que surgem em diversas cores, como amarelo, roxo, rosa, branco e, mais raramente, verde. Pertencente ao gênero Handroanthus, o ipê é uma árvore nativa das Américas, especialmente comum em regiões tropicais e subtropicais da América do Sul, incluindo o Brasil.</p>
             <p class="apresentacao__conteudo__texto">O ipê é uma árvore majestosa e muito apreciada por suas flores vibrantes e ornamentais, que surgem em diversas cores, como amarelo, roxo, rosa, branco e, mais raramente, verde. Pertencente ao gênero Handroanthus, o ipê é uma árvore nativa das Américas, especialmente comum em regiões tropicais e subtropicais da América do Sul, incluindo o Brasil.
 
