--- a/about.html
+++ b/about.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Nos</title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="menu">Pagina incial</a>
-            <a class="menu">Quem Somos</a>
-            <a class="menu">Produtos</a>
+            <a class="menu" href="index.html">Pagina incial</a>
+            <a class="menu" href="about.html">Quem Somos</a>
+            <a class="menu" href="produto.html">Produtos</a>
         </nav>
      </header>
 
@@ -20,8 +21,10 @@
         </section>
     </main>
 
-    <footer class="rodape"></footer>
+    <footer class="rodape">
+        <p>telefone para contato: (18) 3625xxxx</p>
 
+    </footer>
     
 </body>
 </html>
