--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="menu">Pagina incial</a>
-            <a class="menu">Quem Somos</a>
-            <a class="menu">Produtos</a>
+            <a class="menu" href="index.html">Pagina incial</a>
+            <a class="menu" href="about.html">Quem Somos</a>
+            <a class="menu" href="produto.html">Produtos</a>
         </nav>
      </header>
 
