--- a/produtos/maranta.html
+++ b/produtos/maranta.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maranta</title>
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
     <header class="cabecalho">
-        <nav class="cabecalho__menu">
-            <a class="menu">Pagina incial</a>
-            <a class="menu">Quem Somos</a>
-            <a class="menu">Produtos</a>
-        </nav>
-     </header>
+        <header class="cabecalho">
+            <nav class="cabecalho__menu"></nav>
+            <a class="menu" href="../index.html">Pagina incial</a>
+            <a class="menu" href="../about.html">Quem Somos</a>
+            <a class="menu" href="../produto.html">Produtos</a>
+         </header>
 
      <main class="apresentacao">
         <section class="apresentacao__conteudo">
