atualização das class

--- a/produto.html
+++ b/produto.html
@@ -8,46 +8,47 @@
 </head>
 <body>
     <header>
-        <nav class="cabecalho__menu"></nav>
-        <a class="menu" href="index.html">Pagina incial</a>
-        <a class="menu" href="about.html">Quem Somos</a>
-        <a class="menu" href="produto.html">Produtos</a>
+        <nav class="cabecalho-menu">
+            <a class="menu-link" href="index.html">Pagina incial</a>
+            <a class="menu-link" href="about.html">Quem Somos</a>
+            <a class="menu-link" href="produto.html">Produtos</a>
+        </nav>
     </header>
 
     <main>
-        <h1>Conheça nossos produtos</h1>
+        <h1 class="apresentacao">Conheça nossos produtos</h1>
         
        
-        <p><a href="../produtos/bambudasorte.html">Bambu da Sorte</a></p>
+        <p class="apresentacao-conteudo-texto"><a href="../produtos/bambudasorte.html">Bambu da Sorte</a></p>
 
 
-        <p><a href="../produtos/cacto.html">Cacto</a></p>
+        <p class="apresentacao-conteudo-texto"><a href="../produtos/cacto.html">Cacto</a></p>
 
-        <p><a href="./produtos/comigoninguempode.html">Comigo ninguem pode</a> </p>
+        <p class="apresentacao-conteudo-texto"><a href="./produtos/comigoninguempode.html">Comigo ninguem pode</a> </p>
 
-        <p><a href="./produtos/costeladeadao.html"> Costela de Adão</a> </p>
+        <p class="apresentacao-conteudo-texto"><a href="./produtos/costeladeadao.html"> Costela de Adão</a> </p>
 
-        <p><a href="./produtos/croton.html">Cróton</a> </p>
+        <p class="apresentacao-conteudo-texto"><a href="./produtos/croton.html">Cróton</a> </p>
 
-        <p><a href="./produtos/espadadesaojorge.html">Espada de São Jorge</a></p>
+        <p class="apresentacao-conteudo-texto"><a href="./produtos/espadadesaojorge.html">Espada de São Jorge</a></p>
 
-        <p><a href="./produtos/ficuselastica.html">Ficus Elastica</a></p>
+        <p class="apresentacao-conteudo-texto"><a href="./produtos/ficuselastica.html">Ficus Elastica</a></p>
 
-        <p><a href="./produtos/girasol.html">Girasol</a></p>
+        <p class="apresentacao-conteudo-texto"><a href="./produtos/girasol.html">Girasol</a></p>
 
-        <p><a href="./produtos/ipe.html">Ipê</a></p>
+        <p class="apresentacao-conteudo-texto"><a href="./produtos/ipe.html">Ipê</a></p>
 
-        <p><a href="./produtos/maranta.html">Maranta</a></p>
+        <p class="apresentacao-conteudo-texto"><a href="./produtos/maranta.html">Maranta</a></p>
 
-        <p><a href="./produtos/orquidea.html">Orquidea</a></p>
+        <p class="apresentacao-conteudo-texto"><a href="./produtos/orquidea.html">Orquidea</a></p>
 
-        <p><a href="./produtos/rosadodeserto.html">Rosa do Deserto</a></p>
+        <p class="apresentacao-conteudo-texto"><a href="./produtos/rosadodeserto.html">Rosa do Deserto</a></p>
 
-        <p><a href="./produtos/rosas.html">Rosas</a></p>
+        <p class="apresentacao-conteudo-texto"><a href="./produtos/rosas.html">Rosas</a></p>
 
-        <p><a href="./produtos/samambaia.html">Samambaia</a></p>
+        <p class="apresentacao-conteudo-texto"><a href="./produtos/samambaia.html">Samambaia</a></p>
 
-        <p><a href="./produtos/suculenta.html">Suculenta</a></p>
+        <p class="apresentacao-conteudo-texto"><a href="./produtos/suculenta.html">Suculenta</a></p>
 
 
 
