--- a/produtos/costeladeadao.html
+++ b/produtos/costeladeadao.html
@@ -8,21 +8,23 @@
 </head>
 <body>
     <header class="cabecalho">
-        <nav class="cabecalho__menu"></nav>
-        <a class="menu" href="../index.html">Pagina incial</a>
-        <a class="menu" href="../about.html">Quem Somos</a>
-        <a class="menu" href="../produto.html">Produtos</a>
+        <nav class="cabecalho-menu">
+            <a class="menu-link" href="../index.html">Pagina incial</a>
+            <a class="menu-link" href="../about.html">Quem Somos</a>
+            <a class="menu-link" href="../produto.html">Produtos</a>
+        </nav>
+
      </header>
 
      <main class="apresentacao">
-        <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__paragrafo">Costela de Adão</h1>
+        <section class="apresentacao-conteudo">
+            <h1 class="apresentacao-conteudo_-aragrafo">Costela de Adão</h1>
 
             <img src="../fotos/Costela_de_Adao.jpg" alt="foto da planta costela de adão">
 
-            <p class="apresentacao__conteudo__texto">A costela de adão (Monstera deliciosa) é uma planta tropical conhecida por suas folhas grandes, verdes e características que apresentam cortes e furos, dando a impressão de uma "costela". Nativa das florestas tropicais do México e da América Central, essa planta pode crescer como uma trepadeira, subindo por troncos de árvores ou se espalhando pelo chão.</p>
-            <p class="apresentacao__conteudo__texto">As folhas da costela de adão podem atingir até 1 metro de comprimento e têm uma textura cerosa e brilhante. Com o tempo, à medida que a planta envelhece, as folhas desenvolvem mais cortes e furos, o que a torna ainda mais distinta e decorativa. A planta também produz flores brancas e, posteriormente, frutos comestíveis que têm um sabor que lembra uma mistura de abacaxi e banana, embora seu consumo deva ser feito com cautela, pois os frutos só estão prontos para o consumo quando completamente maduros.</p>
-            <p class="apresentacao__conteudo__texto">A costela de adão é uma planta popular em decoração de interiores e jardins, sendo apreciada por sua aparência exótica e sua capacidade de purificar o ar. Ela prefere luz indireta brilhante e solo bem drenado, além de ser bastante tolerante a diferentes condições de cultivo, tornando-a uma escolha ideal para quem busca uma planta de fácil cuidado e impacto visual.</p>
+            <p class="apresentacao-conteudo-texto">A costela de adão (Monstera deliciosa) é uma planta tropical conhecida por suas folhas grandes, verdes e características que apresentam cortes e furos, dando a impressão de uma "costela". Nativa das florestas tropicais do México e da América Central, essa planta pode crescer como uma trepadeira, subindo por troncos de árvores ou se espalhando pelo chão.</p>
+            <p class="apresentacao-conteudo-texto">As folhas da costela de adão podem atingir até 1 metro de comprimento e têm uma textura cerosa e brilhante. Com o tempo, à medida que a planta envelhece, as folhas desenvolvem mais cortes e furos, o que a torna ainda mais distinta e decorativa. A planta também produz flores brancas e, posteriormente, frutos comestíveis que têm um sabor que lembra uma mistura de abacaxi e banana, embora seu consumo deva ser feito com cautela, pois os frutos só estão prontos para o consumo quando completamente maduros.</p>
+            <p class="apresentacao-conteud-texto">A costela de adão é uma planta popular em decoração de interiores e jardins, sendo apreciada por sua aparência exótica e sua capacidade de purificar o ar. Ela prefere luz indireta brilhante e solo bem drenado, além de ser bastante tolerante a diferentes condições de cultivo, tornando-a uma escolha ideal para quem busca uma planta de fácil cuidado e impacto visual.</p>
         </section>
 
     </main>
