--- a/produtos/girasol.html
+++ b/produtos/girasol.html
@@ -8,21 +8,22 @@
 </head>
 <body>
     <header class="cabecalho">
-        <nav class="cabecalho__menu"></nav>
-        <a class="menu" href="../index.html">Pagina incial</a>
-        <a class="menu" href="../about.html">Quem Somos</a>
-        <a class="menu" href="../produto.html">Produtos</a>
+        <nav class="cabecalho-menu">
+            <a class="menu-link" href="../index.html">Pagina incial</a>
+            <a class="menu-link" href="../about.html">Quem Somos</a>
+            <a class="menu-link" href="../produto.html">Produtos</a>
+        </nav>
      </header>
 
      <main class="apresentacao">
-        <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__paragrafo">Girassol</h1>
+        <section class="apresentacao-conteudo">
+            <h1 class="apresentacao_-onteudo-paragrafo">Girassol</h1>
 
             <img src="../fotos/girasol.jpg" alt="foto de girasol">
 
-            <p class="apresentacao__conteudo__texto">O girassol (Helianthus annuus) é uma planta herbácea conhecida por suas grandes e chamativas flores que acompanham o movimento do sol, um fenômeno chamado heliotropismo. Suas flores são compostas por uma coroa de pétalas amarelas brilhantes ao redor de um disco central, que pode variar de amarelo a marrom, dependendo da variedade. Esse disco central é composto de inúmeras flores menores, que posteriormente se transformam em sementes.</p>
-            <p class="apresentacao__conteudo__texto">O girassol pode crescer de 1 a 3 metros de altura, com um caule grosso e áspero que sustenta as flores. As folhas são grandes, em forma de coração, e têm uma textura áspera. O girassol é nativo da América do Norte, mas é cultivado em várias partes do mundo, principalmente por suas sementes, que são usadas para produzir óleo de girassol e como alimento.</p>
-            <p class="apresentacao__conteudo__texto">Além de seu valor econômico, o girassol é frequentemente associado ao simbolismo de felicidade, energia e lealdade, graças à sua aparência radiante e à forma como "segue" o sol. É uma planta resistente e se adapta bem a diferentes tipos de solo, preferindo áreas ensolaradas e de clima moderado.</p>
+            <p class="apresentacao-conteudo-texto">O girassol (Helianthus annuus) é uma planta herbácea conhecida por suas grandes e chamativas flores que acompanham o movimento do sol, um fenômeno chamado heliotropismo. Suas flores são compostas por uma coroa de pétalas amarelas brilhantes ao redor de um disco central, que pode variar de amarelo a marrom, dependendo da variedade. Esse disco central é composto de inúmeras flores menores, que posteriormente se transformam em sementes.</p>
+            <p class="apresentacao-conteudo-texto">O girassol pode crescer de 1 a 3 metros de altura, com um caule grosso e áspero que sustenta as flores. As folhas são grandes, em forma de coração, e têm uma textura áspera. O girassol é nativo da América do Norte, mas é cultivado em várias partes do mundo, principalmente por suas sementes, que são usadas para produzir óleo de girassol e como alimento.</p>
+            <p class="apresentacao-conteudo-texto">Além de seu valor econômico, o girassol é frequentemente associado ao simbolismo de felicidade, energia e lealdade, graças à sua aparência radiante e à forma como "segue" o sol. É uma planta resistente e se adapta bem a diferentes tipos de solo, preferindo áreas ensolaradas e de clima moderado.</p>
         </section>
 
     </main>
