--- a/produtos/ipe.html
+++ b/produtos/ipe.html
@@ -9,23 +9,25 @@
 <body>
     <header class="cabecalho">
         <header class="cabecalho">
-            <nav class="cabecalho__menu"></nav>
-            <a class="menu" href="../index.html">Pagina incial</a>
-            <a class="menu" href="../about.html">Quem Somos</a>
-            <a class="menu" href="../produto.html">Produtos</a>
+            <nav class="cabecalho-menu">
+                <a class="menu-link" href="../index.html">Pagina incial</a>
+                <a class="menu-link" href="../about.html">Quem Somos</a>
+                <a class="menu-link" href="../produto.html">Produtos</a>
+            </nav>
+
          </header>
 
      <main class="apresentacao">
-        <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__paragrafo">Ipê</h1>
+        <section class="apresentacao-conteudo">
+            <h1 class="apresentacao-conteudo-paragrafo">Ipê</h1>
 
             <img src="../fotos/ipe.jpg" alt="foto da arvore ipê">
 
-            <p class="apresentacao__conteudo__texto">O ipê é uma árvore majestosa e muito apreciada por suas flores vibrantes e ornamentais, que surgem em diversas cores, como amarelo, roxo, rosa, branco e, mais raramente, verde. Pertencente ao gênero Handroanthus, o ipê é uma árvore nativa das Américas, especialmente comum em regiões tropicais e subtropicais da América do Sul, incluindo o Brasil.</p>
-            <p class="apresentacao__conteudo__texto">O ipê é uma árvore majestosa e muito apreciada por suas flores vibrantes e ornamentais, que surgem em diversas cores, como amarelo, roxo, rosa, branco e, mais raramente, verde. Pertencente ao gênero Handroanthus, o ipê é uma árvore nativa das Américas, especialmente comum em regiões tropicais e subtropicais da América do Sul, incluindo o Brasil.
+            <p class="apresentacao-conteudo-texto">O ipê é uma árvore majestosa e muito apreciada por suas flores vibrantes e ornamentais, que surgem em diversas cores, como amarelo, roxo, rosa, branco e, mais raramente, verde. Pertencente ao gênero Handroanthus, o ipê é uma árvore nativa das Américas, especialmente comum em regiões tropicais e subtropicais da América do Sul, incluindo o Brasil.</p>
+            <p class="apresentacao-conteudo-texto">O ipê é uma árvore majestosa e muito apreciada por suas flores vibrantes e ornamentais, que surgem em diversas cores, como amarelo, roxo, rosa, branco e, mais raramente, verde. Pertencente ao gênero Handroanthus, o ipê é uma árvore nativa das Américas, especialmente comum em regiões tropicais e subtropicais da América do Sul, incluindo o Brasil.
 
-                O ipê pode atingir alturas de 7 a 30 metros, dependendo da espécie, e possui um tronco robusto com casca rugosa. Suas folhas são compostas por folíolos pequenos e finos, e suas flores, que aparecem geralmente no final do inverno ou início da primavera, criam um espetáculo visual, cobrindo a árvore inteira, muitas vezes antes do surgimento das novas folhas. Essa floração intensa atrai polinizadores, como abelhas e pássaros, tornando o ipê importante para o ecossistema.</p>
-            <p class="apresentacao__conteudo__texto">Além de sua beleza, a madeira do ipê é altamente valorizada por ser extremamente resistente e durável, sendo usada na construção civil e na fabricação de móveis. O ipê amarelo, em particular, é considerado a árvore símbolo do Brasil.</p>
+            <p class="apresentacao-conteudo-texto">O ipê pode atingir alturas de 7 a 30 metros, dependendo da espécie, e possui um tronco robusto com casca rugosa. Suas folhas são compostas por folíolos pequenos e finos, e suas flores, que aparecem geralmente no final do inverno ou início da primavera, criam um espetáculo visual, cobrindo a árvore inteira, muitas vezes antes do surgimento das novas folhas. Essa floração intensa atrai polinizadores, como abelhas e pássaros, tornando o ipê importante para o ecossistema.</p>
+            <p class="apresentacao-conteudo-texto">Além de sua beleza, a madeira do ipê é altamente valorizada por ser extremamente resistente e durável, sendo usada na construção civil e na fabricação de móveis. O ipê amarelo, em particular, é considerado a árvore símbolo do Brasil.</p>
         </section>
 
     </main>
