--- a/produtos/maranta.html
+++ b/produtos/maranta.html
@@ -9,20 +9,22 @@
 <body>
     <header class="cabecalho">
         <header class="cabecalho">
-            <nav class="cabecalho__menu"></nav>
-            <a class="menu" href="../index.html">Pagina incial</a>
-            <a class="menu" href="../about.html">Quem Somos</a>
-            <a class="menu" href="../produto.html">Produtos</a>
+            <nav class="cabecalho-menu">
+                <a class="menu-link" href="../index.html">Pagina incial</a>
+                <a class="menu-link" href="../about.html">Quem Somos</a>
+                <a class="menu-link" href="../produto.html">Produtos</a>
+            </nav>
+
          </header>
 
      <main class="apresentacao">
-        <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__paragrafo">Maranta</h1>
+        <section class="apresentacao-conteudo">
+            <h1 class="apresentacao-conteudo-paragrafo">Maranta</h1>
 
             <img src="../fotos/Maranta.jpg" alt="foto da planta maranta">
 
-            <p class="apresentacao__conteudo__texto">A maranta, também conhecida como planta-risca-de-giz ou planta de oração, é uma planta ornamental popular por suas folhas exuberantes e atraentes, que apresentam padrões geométricos marcantes. As folhas da maranta são largas, ovais e geralmente apresentam veios ou manchas em cores que variam de verde-claro a verde-escuro, com detalhes em tons de vermelho, roxo ou rosa. Uma característica única dessa planta é seu comportamento noturno: à noite, suas folhas se erguem como em uma posição de "oração", e durante o dia se abrem novamente, daí seu apelido "planta de oração".</p>
-            <p class="apresentacao__conteudo__texto">Nativa das florestas tropicais da América Central e do Sul, a maranta prefere ambientes úmidos, com luz indireta e solo bem drenado. Ela é apreciada como planta de interior devido à sua folhagem decorativa e à facilidade de cuidado, desde que receba a quantidade certa de água e umidade. Com o cuidado adequado, pode se tornar um belo complemento para qualquer espaço interno.</p>
+            <p class="apresentacao-conteudo-texto">A maranta, também conhecida como planta-risca-de-giz ou planta de oração, é uma planta ornamental popular por suas folhas exuberantes e atraentes, que apresentam padrões geométricos marcantes. As folhas da maranta são largas, ovais e geralmente apresentam veios ou manchas em cores que variam de verde-claro a verde-escuro, com detalhes em tons de vermelho, roxo ou rosa. Uma característica única dessa planta é seu comportamento noturno: à noite, suas folhas se erguem como em uma posição de "oração", e durante o dia se abrem novamente, daí seu apelido "planta de oração".</p>
+            <p class="apresentacao-conteudo-texto">Nativa das florestas tropicais da América Central e do Sul, a maranta prefere ambientes úmidos, com luz indireta e solo bem drenado. Ela é apreciada como planta de interior devido à sua folhagem decorativa e à facilidade de cuidado, desde que receba a quantidade certa de água e umidade. Com o cuidado adequado, pode se tornar um belo complemento para qualquer espaço interno.</p>
         </section>
 
     </main>
