--- a/produtos/rosadodeserto.html
+++ b/produtos/rosadodeserto.html
@@ -8,20 +8,23 @@
 </head>
 <body>
     <header class="cabecalho">
-        <nav class="cabecalho__menu"></nav>
-        <a class="menu" href="../index.html">Pagina incial</a>
-        <a class="menu" href="../about.html">Quem Somos</a>
-        <a class="menu" href="../produto.html">Produtos</a>
+        <nav class="cabecalho-menu">
+            <a class="menu-link" href="../index.html">Pagina incial</a>
+            <a class="menu-link" href="../about.html">Quem Somos</a>
+            <a class="menu-link" href="../produto.html">Produtos</a>
+        </nav>
+-
+
      </header>
 
      <main class="apresentacao">
-        <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__paragrafo">Rosa do Deserto</h1>
+        <section class="apresentacao-conteudo">
+            <h1 class="apresentacao-conteudo-paragrafo">Rosa do Deserto</h1>
 
             <img src="../fotos/rosa_do_deserto.jpg" alt="foto da rosa do deserto">
 
-            <p class="apresentacao__conteudo__texto">A rosa do deserto (Adenium obesum) é uma planta exótica e ornamental conhecida por seu caule grosso e inchado, que armazena água, e por suas flores vibrantes e chamativas. Nativa de regiões áridas da África e do Oriente Médio, essa planta é uma suculenta e pode variar em tamanho, desde pequenos arbustos até árvores de médio porte. Suas flores têm pétalas em forma de trompete e podem ser encontradas em tons de rosa, vermelho, branco, roxo e, às vezes, com combinações dessas cores.</p>
-            <p class="apresentacao__conteudo__texto">A rosa do deserto se destaca por sua resistência ao calor e à seca, sendo ideal para climas quentes e com baixa umidade. Ela precisa de muito sol e solo bem drenado, e suas flores contrastam com o caule robusto e as folhas verde-escuras e brilhantes. É uma planta muito valorizada em jardins de cactos e suculentas, além de ser usada como bonsai devido à sua forma escultural.</p>
+            <p class="apresentacao-conteudo-texto">A rosa do deserto (Adenium obesum) é uma planta exótica e ornamental conhecida por seu caule grosso e inchado, que armazena água, e por suas flores vibrantes e chamativas. Nativa de regiões áridas da África e do Oriente Médio, essa planta é uma suculenta e pode variar em tamanho, desde pequenos arbustos até árvores de médio porte. Suas flores têm pétalas em forma de trompete e podem ser encontradas em tons de rosa, vermelho, branco, roxo e, às vezes, com combinações dessas cores.</p>
+            <p class="apresentacao-conteudo-texto">A rosa do deserto se destaca por sua resistência ao calor e à seca, sendo ideal para climas quentes e com baixa umidade. Ela precisa de muito sol e solo bem drenado, e suas flores contrastam com o caule robusto e as folhas verde-escuras e brilhantes. É uma planta muito valorizada em jardins de cactos e suculentas, além de ser usada como bonsai devido à sua forma escultural.</p>
         </section>
 
     </main>
