--- a/produtos/suculenta.html
+++ b/produtos/suculenta.html
@@ -8,19 +8,21 @@
 </head>
 <body>
     <header class="cabecalho">
-        <nav class="cabecalho__menu"></nav>
-        <a class="menu" href="../index.html">Pagina incial</a>
-        <a class="menu" href="../about.html">Quem Somos</a>
-        <a class="menu" href="../produto.html">Produtos</a>
+        <nav class="cabecalho-menu">
+            <a class="menu-link" href="../index.html">Pagina incial</a>
+            <a class="menu-link" href="../about.html">Quem Somos</a>
+            <a class="menu-link" href="../produto.html">Produtos</a>
+        </nav>
+
      </header>
 
      <main class="apresentacao">
-        <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__paragrafo">Suculentas</h1>
+        <section class="apresentacao-conteudo">
+            <h1 class="apresentacao-conteudo-aragrafo">Suculentas</h1>
 
             <img src="../fotos/suculentas.jfif" alt="foto de suculentas">
 
-            <p class="apresentacao__conteudo__texto">A planta suculenta é caracterizada por suas folhas, caules ou raízes grossas e carnudas, que armazenam água para sobreviver em ambientes secos. Suas formas variam, podendo ser pequenas e compactas ou se estenderem mais amplamente. As folhas geralmente têm uma aparência cerosa ou espessa e podem ser verdes, azuladas, avermelhadas ou até variegadas. As suculentas são populares por serem de fácil cuidado, exigindo pouca água e manutenção. São ideais para decoração de interiores e jardins, e podem florescer com pequenas e delicadas flores em algumas épocas do ano.</p>
+            <p class="apresentacao-conteudo-texto">A planta suculenta é caracterizada por suas folhas, caules ou raízes grossas e carnudas, que armazenam água para sobreviver em ambientes secos. Suas formas variam, podendo ser pequenas e compactas ou se estenderem mais amplamente. As folhas geralmente têm uma aparência cerosa ou espessa e podem ser verdes, azuladas, avermelhadas ou até variegadas. As suculentas são populares por serem de fácil cuidado, exigindo pouca água e manutenção. São ideais para decoração de interiores e jardins, e podem florescer com pequenas e delicadas flores em algumas épocas do ano.</p>
         </section>
 
     </main>
