--- a/about.html
+++ b/about.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <header class="cabecalho">
-        <nav class="cabecalho__menu">
-            <a class="menu" href="index.html">Pagina incial</a>
-            <a class="menu" href="about.html">Quem Somos</a>
-            <a class="menu" href="produto.html">Produtos</a>
-        </nav>
+        <nav class="cabecalho-menu">
+            <a class="menu-link" href="index.html">Pagina incial</a>
+            <a class="menu-link" href="about.html">Quem Somos</a>
+            <a class="menu-link" href="produto.html">Produtos</a>
+-</nav>
      </header>
 
     <main class="apresentacao">
-        <section class="apresentacao__conteudo">
-            <p class="apresentacao__conteudo__texto"> A Floricultura Araçá nasceu do amor pelas flores e da vontade de trazer mais beleza e cor para o dia a dia das pessoas. Com anos de experiência e dedicação, nos especializamos em oferecer flores frescas, arranjos personalizados e um atendimento atencioso. Cada flor que você encontra aqui é escolhida com cuidado, respeitando a natureza e valorizando a qualidade. Nosso compromisso é transformar sentimentos em arranjos únicos, seja para celebrar momentos especiais ou simplesmente para trazer um toque de natureza ao seu ambiente.</p>
+        <section class="apresentacao-conteudo">
+            <p class="apresentacao-conteudo-texto"> A Floricultura Araçá nasceu do amor pelas flores e da vontade de trazer mais beleza e cor para o dia a dia das pessoas. Com anos de experiência e dedicação, nos especializamos em oferecer flores frescas, arranjos personalizados e um atendimento atencioso. Cada flor que você encontra aqui é escolhida com cuidado, respeitando a natureza e valorizando a qualidade. Nosso compromisso é transformar sentimentos em arranjos únicos, seja para celebrar momentos especiais ou simplesmente para trazer um toque de natureza ao seu ambiente.</p>
         </section>
     </main>
 
