--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 </head>
 <body>
     <header class="cabecalho">
-        <nav class="cabecalho__menu">
-            <a class="menu" href="index.html">Pagina incial</a>
-            <a class="menu" href="about.html">Quem Somos</a>
-            <a class="menu" href="produto.html">Produtos</a>
+        <nav class="cabecalho-menu">
+            <a class="menu-link" href="index.html">Pagina incial</a>
+            <a class="menu-link" href="about.html">Quem Somos</a>
+            <a class="menu-link" href="produto.html">Produtos</a>
         </nav>
      </header>
 
     <main class="apresentacao">
-        <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__paragrafo">Bem-vindo à Floricultura Araçá: Beleza e Natureza ao Seu Alcance</h1>
-            <p class="apresentacao__conteudo__texto">Transforme momentos especiais em memórias inesquecíveis com as nossas flores. Na Floricultura Araçá, a natureza se transforma em arte</p>
+        <section class="apresentacao-conteudo">
+            <h1 class="apresentacao-conteudo-paragrafo">Bem-vindo à Floricultura Araçá: Beleza e Natureza ao Seu Alcance</h1>
+            <p class="apresentacao-conteudo-texto">Transforme momentos especiais em memórias inesquecíveis com as nossas flores. Na Floricultura Araçá, a natureza se transforma em arte</p>
         </section>
 
     </main>
