--- a/produtos/bambudasorte.html
+++ b/produtos/bambudasorte.html
@@ -8,21 +8,23 @@
 </head>
 <body>
     <header class="cabecalho">
-        <nav class="cabecalho__menu"></nav>
-        <a class="menu" href="../index.html">Pagina incial</a>
-        <a class="menu" href="../about.html">Quem Somos</a>
-        <a class="menu" href="../produto.html">Produtos</a>
+        <nav class="cabecalho-menu">
+            <a class="menu-link" href="../index.html">Pagina incial</a>
+            <a class="menu-link" href="../about.html">Quem Somos</a>
+            <a class="menu-link" href="../produto.html">Produtos</a>
+        </nav>
+
      </header>
 
      <main class="apresentacao">
-        <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__paragrafo">Bambu da sorte</h1>
+        <section class="apresentacao-conteudo">
+            <h1 class="apresentacao-conteudo-paragrafo">Bambu da sorte</h1>
             
             <img src="../fotos/Bambu_da_sorte.jpg" alt="foto bambu da sorte">
             
-            <p class="apresentacao__conteudo__texto">O bambu-da-sorte (Dracaena sanderiana), também conhecido como "bambu-da-sorte" ou "bambu da felicidade", é uma planta ornamental popular que não é um verdadeiro bambu, mas pertence à família das dracenas. Nativa da África Central e Ocidental, essa planta é conhecida por sua aparência elegante, com caules longos e eretos, geralmente verde-claros, que podem crescer em alturas variáveis.</p>
-            <p class="apresentacao__conteudo__texto">As folhas do bambu-da-sorte são longas, estreitas e pontiagudas, crescendo em espiral no topo dos caules. A planta é frequentemente cultivada em arranjos aquáticos, onde seus caules são colocados em vasos com água, mas também pode ser cultivada em solo. Acredita-se que o bambu-da-sorte traga sorte e prosperidade, sendo uma planta popular em práticas de Feng Shui.</p>
-            <p class="apresentacao__conteudo__texto">Em termos de cuidados, o bambu-da-sorte é relativamente fácil de manter. Ele prefere luz indireta e pode se adaptar a diferentes condições de luz, embora evite luz solar direta, que pode queimar suas folhas. A planta deve ser mantida em ambientes úmidos, e a água deve ser trocada regularmente se cultivada em arranjos aquáticos. Além de seu simbolismo positivo, o bambu-da-sorte também é valorizado por sua capacidade de purificar o ar, tornando-se uma excelente adição a ambientes internos.</p>
+            <p class="apresentacao-conteudo-texto">O bambu-da-sorte (Dracaena sanderiana), também conhecido como "bambu-da-sorte" ou "bambu da felicidade", é uma planta ornamental popular que não é um verdadeiro bambu, mas pertence à família das dracenas. Nativa da África Central e Ocidental, essa planta é conhecida por sua aparência elegante, com caules longos e eretos, geralmente verde-claros, que podem crescer em alturas variáveis.</p>
+            <p class="apresentacao-conteudo-texto">As folhas do bambu-da-sorte são longas, estreitas e pontiagudas, crescendo em espiral no topo dos caules. A planta é frequentemente cultivada em arranjos aquáticos, onde seus caules são colocados em vasos com água, mas também pode ser cultivada em solo. Acredita-se que o bambu-da-sorte traga sorte e prosperidade, sendo uma planta popular em práticas de Feng Shui.</p>
+            <p class="apresentacao-conteudo-texto">Em termos de cuidados, o bambu-da-sorte é relativamente fácil de manter. Ele prefere luz indireta e pode se adaptar a diferentes condições de luz, embora evite luz solar direta, que pode queimar suas folhas. A planta deve ser mantida em ambientes úmidos, e a água deve ser trocada regularmente se cultivada em arranjos aquáticos. Além de seu simbolismo positivo, o bambu-da-sorte também é valorizado por sua capacidade de purificar o ar, tornando-se uma excelente adição a ambientes internos.</p>
         </section>
 
     </main>
