--- a/produtos/croton.html
+++ b/produtos/croton.html
@@ -8,23 +8,25 @@
 </head>
 <body>
     <header class="cabecalho">
-        <nav class="cabecalho__menu"></nav>
-        <a class="menu" href="../index.html">Pagina incial</a>
-        <a class="menu" href="../about.html">Quem Somos</a>
-        <a class="menu" href="../produto.html">Produtos</a>
+        <nav class="cabecalho-menu">
+            <a class="menu-link" href="../index.html">Pagina incial</a>
+            <a class="menu-link" href="../about.html">Quem Somos</a>
+            <a class="menu-link" href="../produto.html">Produtos</a>
+        </nav>
+
      </header>
 
      <main class="apresentacao">
-        <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__paragrafo">Cróton</h1>
+        <section class="apresentacao-conteudo">
+            <h1 class="apresentacao-conteudo-paragrafo">Cróton</h1>
 
             <img src="../fotos/Cróton.jpg" alt="foto da planta Cróton">
 
-            <p class="apresentacao__conteudo__texto">O cróton (Codiaeum variegatum) é uma planta ornamental muito apreciada por suas folhas vibrantes e variadas, que apresentam uma combinação impressionante de cores, incluindo verde, amarelo, laranja, vermelho e até roxo. As folhas são geralmente largas, ovais ou lobadas, e podem ter formas e padrões distintos, variando entre as diferentes variedades da planta.</p>
-            <p class="apresentacao__conteudo__texto">O cróton (Codiaeum variegatum) é uma planta ornamental muito apreciada por suas folhas vibrantes e variadas, que apresentam uma combinação impressionante de cores, incluindo verde, amarelo, laranja, vermelho e até roxo. As folhas são geralmente largas, ovais ou lobadas, e podem ter formas e padrões distintos, variando entre as diferentes variedades da planta.
+            <p class="apresentacao-conteudo-texto">O cróton (Codiaeum variegatum) é uma planta ornamental muito apreciada por suas folhas vibrantes e variadas, que apresentam uma combinação impressionante de cores, incluindo verde, amarelo, laranja, vermelho e até roxo. As folhas são geralmente largas, ovais ou lobadas, e podem ter formas e padrões distintos, variando entre as diferentes variedades da planta.</p>
+            <p class="apresentacao-conteudo-texto">O cróton (Codiaeum variegatum) é uma planta ornamental muito apreciada por suas folhas vibrantes e variadas, que apresentam uma combinação impressionante de cores, incluindo verde, amarelo, laranja, vermelho e até roxo. As folhas são geralmente largas, ovais ou lobadas, e podem ter formas e padrões distintos, variando entre as diferentes variedades da planta.
 
                 Nativa das regiões tropicais do sudeste asiático e das ilhas do Pacífico, o cróton é um arbusto que pode atingir alturas de até 1,5 metros, embora em ambientes internos geralmente permaneça menor. Ele prefere climas quentes e úmidos, e sua exposição ao sol pode intensificar as cores das folhas, fazendo com que fiquem ainda mais vibrantes.</p>
-            <p class="apresentacao__conteudo__texto">O cróton é frequentemente cultivado em jardins e como planta de interior, trazendo um toque de cor e textura aos ambientes. É uma planta que requer cuidados regulares, como regas consistentes e uma umidade adequada, além de ser sensível a temperaturas muito baixas. Embora seja bastante ornamental, as folhas do cróton podem ser tóxicas se ingeridas, portanto, deve-se ter cuidado ao colocá-lo em ambientes com animais de estimação ou crianças pequenas.</p>
+            <p class="apresentacao-conteudo-texto">O cróton é frequentemente cultivado em jardins e como planta de interior, trazendo um toque de cor e textura aos ambientes. É uma planta que requer cuidados regulares, como regas consistentes e uma umidade adequada, além de ser sensível a temperaturas muito baixas. Embora seja bastante ornamental, as folhas do cróton podem ser tóxicas se ingeridas, portanto, deve-se ter cuidado ao colocá-lo em ambientes com animais de estimação ou crianças pequenas.</p>
         </section>
 
     </main>
