--- a/produtos/ficuselastica.html
+++ b/produtos/ficuselastica.html
@@ -8,21 +8,23 @@
 </head>
 <body>
     <header class="cabecalho">
-        <nav class="cabecalho__menu"></nav>
-        <a class="menu" href="../index.html">Pagina incial</a>
-        <a class="menu" href="../about.html">Quem Somos</a>
-        <a class="menu" href="../produto.html">Produtos</a>
+        <nav class="cabecalho-menu">
+            <a class="menu-link" href="../index.html">Pagina incial</a>
+            <a class="menu-link" href="../about.html">Quem Somos</a>
+            <a class="menu-link" href="../produto.html">Produtos</a>
+        </nav>
+
      </header>
 
      <main class="apresentacao">
-        <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__paragrafo">Ficus Elástica</h1>
+        <section class="apresentacao-conteudo">
+            <h1 class="apresentacao-conteudo-paragrafo">Ficus Elástica</h1>
 
             <img src="../fotos/Ficus_Elastica.jpg" alt="foto da planta Ficus Elastica">
 
-            <p class="apresentacao__conteudo__texto">O Ficus Elástica, também conhecido como figueira-borracha ou árvore-da-borracha, é uma planta ornamental popular devido às suas grandes e brilhantes folhas verdes e sua robustez. Suas folhas são espessas, coriáceas e ovais, variando de verde-escuro a verde-claro, com algumas variedades exibindo bordas rosadas ou amareladas. Quando jovens, as folhas novas podem surgir envoltas em uma capa vermelha que se desfaz à medida que a folha se expande.</p>
-            <p class="apresentacao__conteudo__texto">Nativa das florestas tropicais do sudeste asiático, o Ficus Elástica pode atingir grandes alturas quando cultivado ao ar livre, chegando a até 30 metros, mas como planta de interior, ele geralmente se mantém entre 1 e 3 metros. Seu nome comum, "árvore-da-borracha", vem do látex espesso que sua seiva produz, que já foi utilizado para a fabricação de borracha.</p>
-            <p class="apresentacao__conteudo__texto">A planta é resistente e fácil de cuidar, preferindo luz indireta brilhante, mas tolerando ambientes com pouca luz. Ela precisa de regas moderadas, e seu solo deve estar sempre bem drenado. O Ficus Elástica é uma excelente escolha para quem deseja uma planta de interior vistosa e de fácil manutenção, com um visual tropical e elegante.</p>
+            <p class="apresentacao-conteudo-texto">O Ficus Elástica, também conhecido como figueira-borracha ou árvore-da-borracha, é uma planta ornamental popular devido às suas grandes e brilhantes folhas verdes e sua robustez. Suas folhas são espessas, coriáceas e ovais, variando de verde-escuro a verde-claro, com algumas variedades exibindo bordas rosadas ou amareladas. Quando jovens, as folhas novas podem surgir envoltas em uma capa vermelha que se desfaz à medida que a folha se expande.</p>
+            <p class="apresentacao-conteudo-texto">Nativa das florestas tropicais do sudeste asiático, o Ficus Elástica pode atingir grandes alturas quando cultivado ao ar livre, chegando a até 30 metros, mas como planta de interior, ele geralmente se mantém entre 1 e 3 metros. Seu nome comum, "árvore-da-borracha", vem do látex espesso que sua seiva produz, que já foi utilizado para a fabricação de borracha.</p>
+            <p class="apresentacao-conteud-texto">A planta é resistente e fácil de cuidar, preferindo luz indireta brilhante, mas tolerando ambientes com pouca luz. Ela precisa de regas moderadas, e seu solo deve estar sempre bem drenado. O Ficus Elástica é uma excelente escolha para quem deseja uma planta de interior vistosa e de fácil manutenção, com um visual tropical e elegante.</p>
         </section>
 
     </main>
