--- a/produtos/samambaia.html
+++ b/produtos/samambaia.html
@@ -8,19 +8,21 @@
 </head>
 <body>
     <header class="cabecalho">
-        <nav class="cabecalho__menu"></nav>
-        <a class="menu" href="../index.html">Pagina incial</a>
-        <a class="menu" href="../about.html">Quem Somos</a>
-        <a class="menu" href="../produto.html">Produtos</a>
+        <nav class="cabecalho-menu">
+            <a class="menu-link" href="../index.html">Pagina incial</a>
+            <a class="menu-link" href="../about.html">Quem Somos</a>
+            <a class="menu-link" href="../produto.html">Produtos</a>
+        </nav>
+
      </header>
      
      <main class="apresentacao">
-        <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__paragrafo">Samambaia</h1>
+        <section class="apresentacao-conteudo">
+            <h1 class="apresentacao-conteudo-paragrafo">Samambaia</h1>
 
             <img src="../fotos/samambaia.jpg" alt="foto de samambaia">
 
-            <p class="apresentacao__conteudo__texto">A samambaia é uma planta ornamental conhecida por suas longas e delicadas folhas (chamadas frondes) que se desenrolam em espirais à medida que crescem. As frondes da samambaia têm uma aparência fina, com folhas pequenas e segmentadas ao longo de um caule central, criando uma textura leve e rendada. Elas são plantas de sombra, preferindo ambientes úmidos e com luz indireta. Samambaias são frequentemente usadas em jardins, varandas e interiores, trazendo uma sensação de frescor e verde exuberante. Elas são adaptáveis, mas exigem rega frequente e solo bem drenado para se desenvolverem bem.</p>
+            <p class="apresentacao-conteudo-texto">A samambaia é uma planta ornamental conhecida por suas longas e delicadas folhas (chamadas frondes) que se desenrolam em espirais à medida que crescem. As frondes da samambaia têm uma aparência fina, com folhas pequenas e segmentadas ao longo de um caule central, criando uma textura leve e rendada. Elas são plantas de sombra, preferindo ambientes úmidos e com luz indireta. Samambaias são frequentemente usadas em jardins, varandas e interiores, trazendo uma sensação de frescor e verde exuberante. Elas são adaptáveis, mas exigem rega frequente e solo bem drenado para se desenvolverem bem.</p>
         </section>
 
     </main>
